@@ -1,4 +1,27 @@
 /*
+ * sensor_pi.c -> userspace application to interact with the sensor_pi module
+ *
+ * GPL
+ * (c) 2021, thorsten.johannvorderbrueggen@t-online.de
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+/*
+ * !!!! ACTUAL state of development !!!!
+ *
  * initial version to learn how to get the values of the
  * sensorpi modul (see https://wiki.52pi.com for more details)
  * function:
