@@ -2,6 +2,8 @@
 # some news ... see also TODO for hints
 #
 
+2021-04-30 -> license topics
+
 2021-04-24 -> first release
 
 2021-04-23 -> setup initial parts of the repository
